--- a/zigbee2mqtt/config.json
+++ b/zigbee2mqtt/config.json
@@ -1,10 +1,10 @@
 {
-  "name": "zigbee2mqtt",
+  "name": "zigbee2mqtt-sdv22",
   "version": "1.10.0",
   "slug": "zigbee2mqtt",
   "description": "Zigbee to MQTT Bridge",
   "auto_uart": true,
-  "url": "https://github.com/danielwelch/hassio-zigbee2mqtt",
+  "url": "https://github.com/sdv22/hassio-zigbee2mqtt",
   "startup": "before",
   "arch": [
     "aarch64",
@@ -141,5 +141,5 @@
       "log": "bool?"
     }
   },
-  "image": "dwelch2101/zigbee2mqtt-{arch}"
+  "image": "sdv22/zigbee2mqtt-{arch}"
 }
