--- a/zigbee2mqtt-edge/config.json
+++ b/zigbee2mqtt-edge/config.json
@@ -129,5 +129,5 @@
       "transmit_power": "int?"
     }
   },
-  "image": "sdv22/zigbee2mqtt-{arch}"
+  "image": "dwelch2101/zigbee2mqtt-{arch}"
 }
